# gitx-rs

./: Cargo.toml  README.md
src/: git_cb_main.rs  git_db_main.rs  git_start_main.rs  lib.rs  main.rs
src/cmd/: cb.rs  db.rs  mod.rs  start.rs
src/git/: branch.rs  git.rs  log.rs  mod.rs
