[package]
name = "gitx"
version = "0.0.1"
authors = ["yagince <straitwalk@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yagince/gitx-rs"
homepage = "https://github.com/yagince/gitx-rs"
documentation = "https://github.com/yagince/gitx-rs"
keywords = ["git"]
license = "MIT"
description = """
git subcommands
"""

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"
ansi_term = "0.7"
rustbox = "0.8"
regex = "0.1"

[[bin]]
name = "git-start"
doc = false
path = "src/git_start_main.rs"

[[bin]]
name = "git-cb"
doc = false
path = "src/git_cb_main.rs"
